[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "ratiocinating-machine"
version = "0.0.2"
authors = [
    {name="Machina Ratiocinatrix", email="machina.ratio@gmail.com"},
    {name="Alexander Fedotov", email="alex.fedotov@aol.com"}
]
description = "A Machine that ratiocinates."
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]
keywords = ["ratiocinating-machine"]
dependencies = [
    "pyyaml == 6.0.3"
]

[project.scripts]
ratiocinating-machine = "ratiocinating_machine.cli:run"

[project.urls]
"Homepage" = "https://github.com/ratiocinating-machine/ratiocinating-machine"

[dependency-groups]
dev = ["pytest>=8.0.0"]